# seslogin

./: .env  .env.secret.example  CLAUDE.md  Makefile  README.md  SCHEMA.md
.github/workflows/: _check-pagination.yml  deploy-main.yml  deploy-preprod.yml  deploy-prod.yml
api/: Cargo.toml  schema.graphql
api/src/: activity_summary.rs  db.rs  dynamodb.rs  member_sync.rs  mockdb.rs  nitc_export.rs  request_metrics.rs  ses_api.rs
api/src/graphql/: auth.rs  dataloader.rs  mod.rs  mutations.rs  query.rs
infra/: backend.tf  dynamodb.tf  iam_oidc.tf  lambda_sync.tf  seed_test_pagination.py  variables.tf
web/: eslint.config.js  package-lock.json  package.json  setupTests.ts  vite.config.ts
web/scripts/screenshots/: README.md  capture-admin.mjs  capture-kiosk.mjs  capture-public.mjs
web/src/: global.css
web/src/admin/: AdminApp.tsx  Layout.tsx
web/src/admin/components/: ActivityDailyBreakdownDisplay.tsx  ActivityDailyBreakdownTable.tsx  ActivityListTable.tsx  AdminLoginPage.tsx  LocationSelector.tsx  Notifications.tsx  PasskeyEnrollPrompt.tsx  SessionForm.tsx  SubmenuBar.tsx  TitleBar.tsx  useNotify.ts
web/src/admin/components/__generated__/: ActivityDailyBreakdownDisplayQuery.graphql.ts  ActivityListTable_period.graphql.ts
web/src/admin/pages/: ActivityDailyBreakdown.tsx  ActivityEdit.tsx  ActivityNew.tsx  CategoryEdit.tsx  CategoryList.tsx  CategoryNew.tsx  LocationEdit.tsx  LocationList.tsx  LocationNew.tsx  MembersEdit.tsx  MembersList.tsx  MembersNew.tsx  NitcGroupEdit.tsx  NitcGroupList.tsx  NitcGroupNew.tsx  Reports.tsx  SessionsEdit.tsx  SessionsList.tsx  SessionsNew.tsx  SettingsDailyEmail.tsx  SettingsPasskeys.tsx  UserEdit.tsx  UserList.tsx  UserNew.tsx
web/src/admin/pages/__generated__/: ActivityCurrentLoadMoreQuery.graphql.ts  ActivityCurrentQuery.graphql.ts  ActivityCurrent_periodName.graphql.ts  ActivityListLoadMoreQuery.graphql.ts  ActivityListMemberLoadMoreQuery.graphql.ts  ActivityListMemberQuery.graphql.ts  ActivityListQuery.graphql.ts  ActivityList_periodName.graphql.ts  ReportsQuery.graphql.ts
web/src/components/: ClientVersionLabel.tsx
web/src/components/ui/: OptionList.tsx  TitleBarShell.tsx
web/src/kiosk/: KioskMain.test.tsx
web/src/kiosk/components/: ScanScreenAdjust.tsx  ScanScreenCategories.tsx  ScanScreenMain.tsx  ScanTitleBar.tsx  StatusCurrentDisplay.tsx
web/src/kiosk/pages/: Scan.tsx
web/src/lib/: categories.ts  passkey.ts  relayErrors.ts
(+3 files in other folders)
